[bdist_wheel]
universal = 0

[metadata]
name = python-openhab-itemevents
version = 0.1.0
description = A simple program for accessing the ItemEvents of openHAB by using the server-sent events from the openHAB REST API. Whether via the cloud or locally.
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Dörflinger
author_email = michaeldoerflinger93@gmail.com
url = https://github.com/Michdo93/python-openhab-itemevents
license = MIT License
download_url = https://github.com/Michdo93/python-openhab-itemevents
project_urls =
    Bug Tracker = https://github.com/Michdo93/python-openhab-itemevents/issues
    Documentation = https://github.com/Michdo93/python-openhab-itemevents/blob/main/README.md
    Source Code = https://github.com/Michdo93/python-openhab-itemevents
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    openHAB

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires = >=3.5
install_requires =
    requests>=2.28.1
